<resources>
    <string name="app_name">AndroidLab</string>

    <string name="first_screen_description">This is the FirstScreen</string>
    <string name="navigate_to_second_screen">Navigate SecondScreen</string>
    <string name="second_screen_description">This is the SecondScreen</string>
    <string name="navigate_to_third_screen">Navigate ThirdScreen</string>
    <string name="third_screen_description">This is the ThirdScreen</string>
    <string name="button_show_details">Show Details</string>
    <string name="second_screen_detail_text">This is the description of the second screen.</string>
    <string name="try_again">Try again</string>
    <string name="empty_users_title">No users found</string>
    <string name="empty_repos_title">No repositories found</string>
    <string name="end_of_list_title">No more items</string>
    <string name="see_more">see more</string>
    <string name="repositories_title">Repositories</string>
    <string name="followers_title">%s followers</string>
    <string name="following_title">%s following</string>
    <string name="wifi_level">Signal Strength: %d dBm</string>
    <string name="wifi_frequency">Frequency: %d MHz</string>
    <string name="empty_screen_title">Screen under construction</string>
    <string name="empty_screen_subtitle">This screen is still under construction. This sample will help you learn about adaptive layouts in Jetpack Compose</string>
    <string name="tab_home">Home</string>
    <string name="tab_search">Search</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_settings">Settings</string>
</resources>
